Fix board letters not showing on  mobile devices attempt 3

--- a/client/src/Board.css
+++ b/client/src/Board.css
@@ -32,6 +32,7 @@
   text-align: center;
   text-transform: capitalize;
   outline: none;
+  padding: 0;
   font-size: 3.5em;
   font-weight: bold;
   color: var(--black);
@@ -98,7 +99,8 @@
   .box-input {
     width: 3.7rem;
     height: 3.7rem;
-    font-size: 2.4em;
+    font-size: 2em;
+    padding: 8px;
   }
 
   .solve-btn {
